# docker-volman

./: .gitignore  .npmignore  README.md  backup-docker-volumes.sh  compose.base.yml  compose.sh  index.ts  package.json  pyproject.toml  readme.md  restore-docker-volumes.sh  run.py  run.sh  techstack.md  techstack.yml  template.env  tsconfig.json
backup/: README.md
old/: run.sh  template.env
old/scripts/: overwrite.sh
scripts/: install.sh  overwrite.sh
src/: generate-compose.ts
src/compose/: compose.base.yml
