[tool.poetry]
name = "volman"
version = "0.1.0"
description = "Easy volume management for Docker"
authors = ["Dean Ayalon <dev@deanayalon.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
